kubernetes/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: kalimaya-storage
spec:
  selector:
    app: kalimaya-storage
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
